# autogen/openapi_server/controllers/default_controller.py
@@ -2,8 +2,20 @@ import connexion
 import six
 
 from openapi_server.models.average_each_year import AverageEachYear  # noqa: E501
+from openapi_server.models.director import Director  # noqa: E501
 from openapi_server.models.movie import Movie  # noqa: E501
 from openapi_server import util
+
+
+def controller_find_most_score_of_year():  # noqa: E501
+    """Returns a list movie.
+
+     # noqa: E501
+
+
+    :rtype: str
+    """
+    return 'do some magic!'
 
 
 def controller_get_average_score_for_director(director_name):  # noqa: E501
@@ -19,13 +31,24 @@ def controller_get_average_score_for_director(director_name):  # noqa: E501
     return 'do some magic!'
 
 
-def controller_get_average_score_of_actor(actor_1_name):  # noqa: E501
+def controller_get_average_score_for_each_director():  # noqa: E501
+    """Returns a list movie.
+
+     # noqa: E501
+
+
+    :rtype: List[Director]
+    """
+    return 'do some magic!'
+
+
+def controller_get_average_score_of_actor(actor_name):  # noqa: E501
     """Returns average score of all movie of this director.
 
      # noqa: E501
 
-    :param actor_1_name: 
-    :type actor_1_name: str
+    :param actor_name: 
+    :type actor_name: str
 
     :rtype: float
     """
@@ -56,6 +79,17 @@ def controller_get_average_score_of_movies_in_that_year(title_year):  # noqa: E5
     return 'do some magic!'
 
 
+def controller_get_best_director():  # noqa: E501
+    """Returns a list movie.
+
+     # noqa: E501
+
+
+    :rtype: str
+    """
+    return 'do some magic!'
+
+
 def controller_get_best_movies():  # noqa: E501
     """Returns a list movie that ahve imdb scor more than 9.5.
 
@@ -74,6 +108,19 @@ def controller_get_movie_by_year(title_year):  # noqa: E501
 
     :param title_year: 
     :type title_year: int
+
+    :rtype: Movie
+    """
+    return 'do some magic!'
+
+
+def controller_get_movie_detail_by_movie_title(movie_title):  # noqa: E501
+    """Returns full detail of the movies that have this title.
+
+     # noqa: E501
+
+    :param movie_title: 
+    :type movie_title: str
 
     :rtype: Movie
     """
@@ -104,13 +151,13 @@ def controller_get_movies_directed_by_director_name(director_name):  # noqa: E50
     return 'do some magic!'
 
 
-def controller_get_movies_of_actor(actor_1_name):  # noqa: E501
+def controller_get_movies_from_actor(actor_name):  # noqa: E501
     """Returns a list of movies that this director has directed.
 
      # noqa: E501
 
-    :param actor_1_name: 
-    :type actor_1_name: str
+    :param actor_name: 
+    :type actor_name: str
 
     :rtype: Movie
     """
