# autogen/openapi_server/models/__init__.py
@@ -4,4 +4,5 @@
 from __future__ import absolute_import
 # import models into model package
 from openapi_server.models.average_each_year import AverageEachYear
+from openapi_server.models.director import Director
 from openapi_server.models.movie import Movie
