# openapi/movies-api.yaml
@@ -65,6 +65,23 @@ paths:
               operationId: controller.get_average_score_of_movies_in_that_year
               parameters:
                 actor_1_name: $response.body#/title_year
+  /movies/{movie_title}:
+    parameters:
+    - name: movie_title
+      in: path
+      required: true
+      schema:
+        type : string
+    get:
+      summary: Returns full detail of the movies that have this title.
+      operationId: controller.get_movie_detail_by_movie_title
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                  $ref: '#/components/schemas/Movie'
   /movies/{title_year}/year-score:
     parameters:
     - name: title_year
@@ -112,16 +129,82 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Movie'
-  /movies/{actor_1_name}:
+  /movies/EachYearScore:
+    get:
+      summary: Returns a list movie.
+      operationId: controller.get_average_score_of_movies_in_each_year
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/AverageEachYear'
+  /movies/MostYearScore:
+    get:
+      summary: Returns a list movie.
+      operationId: controller.find_most_score_of_year
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: string
+  /movies/EachDirectorScore:
+    get:
+      summary: Returns a list movie.
+      operationId: controller.get_average_score_for_each_director
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Director'
+  /movies/BestDirector:
+    get:
+      summary: Returns a list movie.
+      operationId: controller.get_best_director
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: string
+  # /movies/{title_year}/EachDirectorScore/:
+  #   - name: title_year
+  #     in: path
+  #     required: true
+  #     schema:
+  #       type : integer
+  #   get:
+  #     summary: Returns a list movie.
+  #     operationId: controller.et_average_score_for_each_director_in_each_year
+  #     responses:
+  #       200:
+  #         description: Success
+  #         content:
+  #           application/json:
+  #             schema:
+  #               type: array
+  #               items:
+  #                 $ref: '#/components/schemas/Director'
+  /movies/{actor_name}:
     parameters:
-    - name: actor_1_name
+    - name: actor_name
       in: path
       required: true
       schema:
         type : string
     get:
       summary: Returns a list of movies that this director has directed.
-      operationId: controller.get_movies_of_actor
+      operationId: controller.get_movies_from_actor
       responses:
         200:
           description: Success
@@ -133,10 +216,10 @@ paths:
             all-score:
               operationId: controller.get_average_score_of_actor
               parameters:
-                actor_1_name: $response.body#/actor_1_name
-  /movies/{actor_1_name}/all-score:
+                actor_1_name: $response.body#/actor_name
+  /movies/{actor_name}/all-score:
     parameters:
-    - name: actor_1_name
+    - name: actor_name
       in: path
       required: true
       schema:
@@ -151,156 +234,7 @@ paths:
             application/json:
               schema:
                 type: number
-  /movies/EachYearScore:
-    get:
-      summary: Returns a list movie.
-      operationId: controller.get_average_score_of_movies_in_each_year
-      responses:
-        200:
-          description: Success
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/AverageEachYear'
           
-
-
-  # /basins/{basinId}:
-  #   parameters:
-  #   - name: basinId
-  #     in: path
-  #     required: true
-  #     schema:
-  #       type : integer
-  #   get:
-  #     summary: Returns complete details of the specified movie
-  #     operationId: controller.get_basin_details
-  #     responses:
-  #       200:
-  #         description: Success
-  #         content:
-  #           application/json:
-  #             schema:
-  #               $ref: '#/components/schemas/Basin'
-  #         links:
-  #           stations:
-  #             operationId: controller.get_stations_in_basin
-  #             parameters:
-  #               basinId: $response.body#/basinId
-  #           geom:
-  #             operationId: controller.get_basin_geom
-  #             parameters:
-  #               basinId: $response.body#/basinId
-  #           annualRainfall:
-  #             operationId: controller.get_basin_annual_rainfall
-  #             parameters:
-  #               basinId: $response.body#/basinId
-  #           avgMonthlyRainfalls:
-  #             operationId: controller.get_basin_monthly_average
-  #             parameters:
-  #               basinId: $response.body#/basinId
-  # /basins/{basinId}/geom:
-  #   parameters:
-  #   - name: basinId
-  #     in: path
-  #     required: true
-  #     schema:
-  #       type : integer
-  #   get:
-  #     summary: Returns WKT representation of the specified basin's geometry
-  #     operationId: controller.get_basin_geom
-  #     responses:
-  #       200:
-  #         description: Success
-  #         content:
-  #           application/json:
-  #             schema:
-  #               type: string
-  # /stationsInBasin/{basinId}:
-  #   parameters:
-  #   - name: basinId
-  #     in: path
-  #     required: true
-  #     schema:
-  #       type : integer
-  #   get:
-  #     summary: Returns a list of stations located within the specified basin.
-  #     operationId: controller.get_stations_in_basin
-  #     responses:
-  #       200:
-  #         description: Success
-  #         content:
-  #           application/json:
-  #             schema:
-  #               type: array
-  #               items:
-  #                 $ref: '#/components/schemas/Station'
-  # /stations/{stationId}:
-  #   parameters:
-  #   - name: stationId
-  #     in: path
-  #     required: true
-  #     schema:
-  #       type : integer
-  #   get:
-  #     summary: Returns complete details of the specified station
-  #     operationId: controller.get_station_details
-  #     responses:
-  #       200:
-  #         description: Success
-  #         content:
-  #           application/json:
-  #             schema:
-  #               $ref: '#/components/schemas/Station'
-  #         links:
-  #           basin:
-  #             operationId: controller.get_basin_details
-  #             parameters:
-  #               basinId: $response.body#/basinId
-  # /basins/{basinId}/annualRainfalls/{year}:
-  #   parameters:
-  #   - name: basinId
-  #     in: path
-  #     required: true
-  #     schema:
-  #       type : integer
-  #   - name: year
-  #     in: path
-  #     required: true
-  #     schema:
-  #       type : integer
-  #   get:
-  #     summary: Returns total annual rainfall for the specified basin in the specified year
-  #     operationId: controller.get_basin_annual_rainfall
-  #     responses:
-  #       200:
-  #         description: Success
-  #         content:
-  #           application/json:
-  #             schema:
-  #               type: number
-  # /basins/{basinId}/monthlyAverage:
-  #   parameters:
-  #   - name: basinId
-  #     in: path
-  #     required: true
-  #     schema:
-  #       type : integer
-  #   get:
-  #     summary: Returns monthly average rainfall for the specified basin across all available years
-  #     operationId: controller.get_basin_monthly_average
-  #     responses:
-  #       200:
-  #         description: Success
-  #         content:
-  #           application/json:
-  #             schema:
-  #               type: array
-  #               items:
-                  # $ref: '#/components/schemas/MonthlyAverage'
-
 components:
   schemas:
     Movie:
@@ -338,8 +272,17 @@ components:
     AverageEachYear:
       type: object
       properties:
-        year:
-          type: Integer
-        score:
+        title_year:
+          type: integer
+        imdb_avg_score:
           type: number
           format: float
+    Director:
+      type: object
+      properties:
+        director_name:
+          type: string
+        imdb_avg_score:
+          type: number
+          format: float
+      
